--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="https://kit.fontawesome.com/6408dae774.js" crossorigin="anonymous"></script>
 
         <title>Booki</title>
-        <link rel="icon" type="image/x-icon" href="/images/Booki_favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/images/Booki_favicon.ico?">
     </head>
     <body>
 
