--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                 <h3><a href="#">Afficher plus</a></h3>
             </div>
             <div class="popular">
-                <h2>Les plus populaires</h2>
+                <div class="icon">
+                    <h2>Les plus populaires</h2>
+                    <div><i class="fas fa-chart-line"></i></div>
+                </div>
                 <div class="list">
                     <a href="#" class="card">
                         <img src="images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
