--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
             </div>
 
-            <div class="info"><i class="fas fa-info" style="font-size: 12px; color: #0065FC"></i>Plus de 500 logements sont disponibles dans cette ville</div>
+            <div class="info"><i class="fas fa-info" style="font-size: 12px; color: #0065FC"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
 
         </section>
         <section id="hebergement">
@@ -73,48 +73,60 @@
                     <a href="#" class="card">
                         <img src="images/hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
                         <article>
-                            <h3>Auberge La Cannebière</h3>
-                            <p>Nuit à partir de <b>25€</b></p>
+                            <div>
+                                <h3>Auberge La Cannebière</h3>
+                                <p>Nuit à partir de <b>25€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #F2F2F2"></i></p>
                         </article>
                     </a>
                     <a href="#" class="card">
                         <img src="images/hebergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du Port">
                         <article>
-                            <h3>Hôtel du Port</h3>
-                            <p>Nuit à partir de <b>52€</b></p>
+                            <div>
+                                <h3>Hôtel du Port</h3>
+                                <p>Nuit à partir de <b>52€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i></p>
                         </article>
                     </a>
                     <a href="#" class="card">
                         <img src="images/hebergements/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les Mouettes">
                         <article>
-                            <h3>Hôtel les Mouettes</h3>
-                            <p>Nuit à partir de <b>76€</b></p>
+                            <div>
+                                <h3>Hôtel les Mouettes</h3>
+                                <p>Nuit à partir de <b>76€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #F2F2F2"></i></p>
                         </article>
                     </a>
                     <a href="#" class="card">
                         <img src="images/hebergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la Mer">
                         <article>
-                            <h3>Hôtel de la Mer</h3>
-                            <p>Nuit à partir de <b>46€</b></p>
+                            <div>
+                                <h3>Hôtel de la Mer</h3>
+                                <p>Nuit à partir de <b>46€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #F2F2F2"></i><i class="fas fa-star" style="color: #F2F2F2"></i></p>
                         </article>
                     </a>
                     <a href="#" class="card">
                         <img src="images/hebergements/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                         <article>
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de <b>23€</b></p>
+                            <div>
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de <b>23€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #F2F2F2"></i></p>
                         </article>
                     </a>
                     <a href="#" class="card">
                         <img src="images/hebergements/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                         <article>
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de <b>96€</b></p>
+                            <div>
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de <b>96€</b></p>
+                            </div>
                             <p class="stars"><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i><i class="fas fa-star" style="color: #0065FC"></i></p>
                         </article>
                     </a>
