changement ancrage hébergement + modif recherche

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <img src="images/Booki@3x.png" alt="Logo Booki" />
             <nav>
-                <a href=#hebergement>Hébergements</a>
+                <a href=#hotels>Hébergements</a>
                 <a href=#activity>Activités</a>
             </nav>
         </header>
@@ -66,8 +66,8 @@
             <div class="info"><i class="fas fa-info" style="font-size: 12px; color: #0065FC"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
 
         </section>
-        <section id="hebergement">
-            <div class="hotels">
+        <section class="hebergement">
+            <div id="hotels">
                 <h2>Hébergements à Marseille</h2>
                 <div class="list">
                     <a href="#" class="card">
@@ -177,27 +177,39 @@
             <div class="list">
                 <a href="#" class="card">
                     <img src="images/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="focus" alt="Vieux Port">
-                    <h3>Vieux Port</h3>
+                    <article>
+                        <h3>Vieux Port</h3>
+                    </article>
                 </a>
                 <a href="#" class="card">
                     <img src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="major" alt="Fort de Pomègues">
-                    <h3>Fort de Pomègues</h3>
+                    <article>
+                        <h3>Fort de Pomègues</h3>
+                    </article>
                 </a>
                 <a href="#" class="card">
                     <img src="images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="minor" alt="Îles du Frioul">
-                    <h3>Îles du Frioul</h3>
+                    <article>
+                        <h3>Îles du Frioul</h3>
+                    </article>
                 </a>
                 <a href="#" class="card">
                     <img src="images/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="focus" alt="Parc National des Calanques">
-                    <h3>Parc National des Calanques</h3>
+                    <article>
+                        <h3>Parc National des Calanques</h3>
+                    </article>
                 </a>
                 <a href="#" class="card">
                     <img src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="minor" alt="Notre-Dame-de-la-Garde">
-                    <h3>Notre-Dame-de-la-Garde</h3>
+                    <article>
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </article>
                 </a>
                 <a href="#" class="card">
                     <img src="images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="major" alt="Parc Longchamp">
-                    <h3>Parc Longchamp</h3>
+                    <article>
+                        <h3>Parc Longchamp</h3>
+                    </article>
                 </a>
             </div>
         </section>
